--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.8",
     "framer-motion": "^12.23.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^6.28.0",
+    "react-router-dom": "^7.6.3",
     "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
@@ -24,12 +25,12 @@
     "@typescript-eslint/parser": "^8.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.56.0",
+    "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "vite": "^5.4.0"
+    "vite": "^7.0.2"
   }
 }
